# AncientVoices

./: .gitignore  AncientVoices (1).jucer  AncientVoices.jucer  CMakeLists.txt  PluginProcessor.cpp  build.sh  developerID_application.cer  promote.sh  rebuild.sh  reset.sh  setup.sh
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/AncientVoices.xcodeproj/: project.pbxproj
Builds/MacOSX/AncientVoices.xcodeproj/project.xcworkspace/xcuserdata/nicholasadmin.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/AncientVoices.xcodeproj/xcuserdata/nicholasadmin.xcuserdatad/xcschemes/: xcschememanagement.plist
Source/: AncientVoicesConfig.h  DSPModules.cpp  DSPModules.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: CaveReverb.h  ChoirEngine.h  ChoirVoice.h  FormantFilter.h  FormantShimmer.h  GlottalSource.h  HumanizeEngine.h  PitchQuantizer.h  PitchTracker.h  SaturationStage.h  VocalChorus.h
Source/Data/: IntervalTables.h  Presets.h  VowelTables.h
Source/UI/: AncientPanel.h  DiagnosticPanel.h  FXPanel.h  FormantScope.h  SpectrumAnalyser.h  UI.h  VoicePanel.h
